<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
>
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.robfrank</groupId>
    <artifactId>exercises</artifactId>
    <packaging>pom</packaging>
    <version>24.8.3-SNAPSHOT</version>
    <name>exercises</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <normalized.os.name>${os.name}</normalized.os.name>

        <junit.version>5.12.2</junit.version>
        <assertj.version>3.27.3</assertj.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <picocli.version>4.7.6</picocli.version>
        <archunit-junit5.version>1.4.0</archunit-junit5.version>
        <commons-logging.version>1.3.5</commons-logging.version>
        <slf4j-api.version>2.0.17</slf4j-api.version>

        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
        <native-image-maven-plugin.version>0.10.6</native-image-maven-plugin.version>
        <arch-unit-maven-plugin.version>4.0.2</arch-unit-maven-plugin.version>

        <rewrite-static-analysis.version>2.8.0</rewrite-static-analysis.version>
        <rewrite-logging-frameworks.version>3.6.1</rewrite-logging-frameworks.version>
        <rewrite-maven-plugin.version>6.6.1</rewrite-maven-plugin.version>
        <rewrite-migrate-java.version>3.7.0</rewrite-migrate-java.version>
        <rewrite-testing-frameworks.version>3.6.1</rewrite-testing-frameworks.version>
    </properties>
    <modules>
        <module>arch-tests</module>
        <module>core</module>
        <module>cli</module>
        <module>web-javalin</module>
    </modules>
    <scm>
        <developerConnection>scm:git:https://github.com/robfrank/exercises.git</developerConnection>
        <url>https://github.com/robfrank/exercises</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/robfrank/exercises</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/robfrank/exercises</url>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <enablePreview>false</enablePreview>
                    <release>24</release>
                    <compilerArgs>
                        <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>@{argLine} --enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <argLine>@{argLine} --enable-preview</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.societegenerale.commons</groupId>
                <artifactId>arch-unit-maven-plugin</artifactId>
                <version>${arch-unit-maven-plugin.version}</version>
                <configuration>
                    <noFailOnError>false</noFailOnError>
                    <rules>
                        <configurableRules>
                            <configurableRule>
                                <rule>it.robfrank.exercises.fizzbuzz.archtests.CommonArchTest</rule>
                                <applyOn>
                                    <packageName>it.robfrank.exercises.fizzbuzz</packageName>
                                    <scope>main</scope>
                                </applyOn>
                            </configurableRule>
                            <configurableRule>
                                <rule>it.robfrank.exercises.fizzbuzz.archtests.ComponentArchTest</rule>
                                <applyOn>
                                    <packageName>it.robfrank.exercises.fizzbuzz</packageName>
                                    <scope>main</scope>
                                </applyOn>
                            </configurableRule>
                        </configurableRules>
                    </rules>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>arch-test</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>${rewrite-maven-plugin.version}</version>
                <configuration>
                    <activeRecipes>
                        <recipe>it.robfrank.GeneralCleanup</recipe>
                    </activeRecipes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>${rewrite-static-analysis.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-logging-frameworks</artifactId>
                        <version>${rewrite-logging-frameworks.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-migrate-java</artifactId>
                        <version>${rewrite-migrate-java.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-testing-frameworks</artifactId>
                        <version>${rewrite-testing-frameworks.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <mainClass>it.robfrank.exercises.fizzbuzz.FizzBuzzMain</mainClass>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>${native-image-maven-plugin.version}</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>compile-no-fork</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <imageName>${project.artifactId}-${project.version}-${normalized.os.name}-${os.arch}</imageName>
                        <skipNativeTests>true</skipNativeTests>
                        <metadataRepository>
                            <enabled>true</enabled>
                        </metadataRepository>
                        <fallback>false</fallback>
                        <buildArgs combine.children="append">
                            <arg>--enable-preview</arg>
<!--                            <arg>-H:+GenerateEmbeddedResourcesFile</arg>-->
<!--                            <arg>-H:Log=registerResource:5</arg>-->
<!--                            <arg>-H:IncludeResources=logback.xml</arg>-->
                            <!--                            <arg>-H:DashboardDump=fortune -H:+DashboardAll &#45;&#45;enable-url-protocols=http</arg>-->
                            <arg>--enable-url-protocols=http</arg>
                        </buildArgs>
                        <agent>
                            <enabled>true</enabled>
                        </agent>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons-logging.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <normalized.os.name>macos</normalized.os.name>
            </properties>
        </profile>
    </profiles>
</project>
